components/o3-button/main.css
@import '@financial-times/o3-web-token/icons/_variables.css';

@font-face {
	src: url('https://www.ft.com/__origami/service/build/v3/font?version=1.13&font_name=Metric2-VF&system_code=origami&font_format=woff2')
		format('woff2');
	font-family: 'Metric2-VF';
	font-weight: 500;
	font-style: normal;
	font-display: swap;
}

.o3-button {
	--_o3-button-font-size: var(--o3-font-size-negative-2);
	--_o3-button-lineheight: var(--o3-font-lineheight-negative-2);

	--_o3-button-block-padding: var(--o3-spacing-3xs);
	--_o3-button-inline-padding: var(--o3-spacing-2xs);

	--_o3-button-min-height: 28px;
	--_o3-button-min-width: 60px;
	--_o3-button-border-size: 1px;
	--_o3-icon-size: calc(
		var(--_o3-button-min-height) - (var(--_o3-button-block-padding) * 2)
	);

	min-width: var(--_o3-button-min-width);
	min-height: var(--_o3-button-min-height);
	padding: 0 var(--_o3-button-inline-padding);
	display: inline-flex;
	align-items: center;
	justify-content: center;
	box-sizing: border-box;
	vertical-align: middle;
	font-size: var(--_o3-button-font-size);
	line-height: var(--_o3-button-lineheight);
	font-weight: 450;
	font-family: 'Metric2-VF', sans-serif;
	border: var(--_o3-button-border-size) solid transparent;
	text-align: center;
	text-decoration: none;
	cursor: pointer;
	transition: 0.3s background-color, 0.15s color ease-out,
		0.15s border-color ease-out;
	appearance: none;
}

.o3-button[disabled] {
	pointer-events: none;
	opacity: 0.4;
	cursor: default;
}

.o3-button:focus {
	box-shadow: var(--o3-box-shadow-focus-ring-inner), var(--o3-box-shadow-focus-ring-outer);
	outline: unset;
}
.o3-button.o3-button--inverse:focus {
	box-shadow: var(--o3-box-shadow-focus-ring-inverse-inner), var(--o3-box-shadow-focus-ring-inverse-outer);
}

@supports selector(:focus-visible) {
	.o3-button:focus {
		box-shadow: unset;
	}

	.o3-button:focus-visible {
		box-shadow: var(--o3-box-shadow-focus-ring-inner), var(--o3-box-shadow-focus-ring-outer);
		outline: unset;
	}
	.o3-button.o3-button--inverse:focus-visible {
		box-shadow: var(--o3-box-shadow-focus-ring-inverse-inner), var(--o3-box-shadow-focus-ring-inverse-outer);
	}
}

/* PRIMARY */

.o3-button.o3-button--primary {
	color: var(--_o3-button-primary-standard-color);
	background-color: var(--_o3-button-primary-standard-background);
	border-color: var(--_o3-button-primary-standard-border);
}

.o3-button.o3-button--primary:hover {
	color: var(--_o3-button-primary-standard-hover-color);
	background-color: var(--_o3-button-primary-standard-hover-background);
	border-color: var(--_o3-button-primary-standard-hover-border);
}

.o3-button.o3-button--primary:focus {
	color: var(--_o3-button-primary-standard-focus-color);
	background-color: var(--_o3-button-primary-standard-focus-background);
	border-color: var(--_o3-button-primary-standard-focus-border);
}

.o3-button.o3-button--primary:active,
.o3-button--primary[aria-selected='true'],
.o3-button--primary[aria-current],
.o3-button--primary[aria-pressed='true'] {
	color: var(--_o3-button-primary-standard-active-color);
	background-color: var(--_o3-button-primary-standard-active-background);
	border-color: var(--_o3-button-primary-standard-active-border);
}

/* PRIMARY INVERSE BUTTON STYLES */
.o3-button.o3-button--primary.o3-button--inverse {
	color: var(--_o3-button-primary-inverse-color);
	background-color: var(--_o3-button-primary-inverse-background);
	border-color: var(--_o3-button-primary-inverse-border);
}

.o3-button.o3-button--primary.o3-button--inverse:hover {
	color: var(--_o3-button-primary-inverse-hover-color);
	background-color: var(--_o3-button-primary-inverse-hover-background);
	border-color: var(--_o3-button-primary-inverse-hover-border);
}

.o3-button.o3-button--primary.o3-button--inverse:focus {
	color: var(--_o3-button-primary-inverse-focus-color);
	background-color: var(--_o3-button-primary-inverse-focus-background);
	border-color: var(--_o3-button-primary-inverse-focus-border);
}

.o3-button.o3-button--primary.o3-button--inverse:active,
.o3-button--primary.o3-button--inverse[aria-selected='true'],
.o3-button--primary.o3-button--inverse[aria-current],
.o3-button--primary.o3-button--inverse[aria-pressed='true'] {
	color: var(--_o3-button-primary-inverse-active-color);
	background-color: var(--_o3-button-primary-inverse-active-background);
	border-color: var(--_o3-button-primary-inverse-active-border);
}

/* PRIMARY MONO STYLES */

.o3-button.o3-button--primary.o3-button--mono {
	color: var(--_o3-button-primary-mono-color);
	background-color: var(--_o3-button-primary-mono-background);
	border-color: var(--_o3-button-primary-mono-border);
}

.o3-button.o3-button--primary.o3-button--mono:hover {
	color: var(--_o3-button-primary-mono-hover-color);
	background-color: var(--_o3-button-primary-mono-hover-background);
	border-color: var(--_o3-button-primary-mono-hover-border);
}

.o3-button.o3-button--primary.o3-button--mono:focus {
	color: var(--_o3-button-primary-mono-focus-color);
	background-color: var(--_o3-button-primary-mono-focus-background);
	border-color: var(--_o3-button-primary-mono-focus-border);
}

.o3-button.o3-button--primary.o3-button--mono:active,
.o3-button--primary.o3-button--mono[aria-selected='true'],
.o3-button--primary.o3-button--mono[aria-current],
.o3-button--primary.o3-button--mono[aria-pressed='true'] {
	color: var(--_o3-button-primary-mono-active-color);
	background-color: var(--_o3-button-primary-mono-active-background);
	border-color: var(--_o3-button-primary-mono-active-border);
}

/* SECONDARY */
.o3-button.o3-button--secondary {
	color: var(--_o3-button-secondary-standard-color);
	background-color: var(--_o3-button-secondary-standard-background);
	border-color: var(--_o3-button-secondary-standard-border);
}

.o3-button.o3-button--secondary:hover {
	color: var(--_o3-button-secondary-standard-hover-color);
	background-color: var(--_o3-button-secondary-standard-hover-background);
	border-color: var(--_o3-button-secondary-standard-hover-border);
}
/* ... */

